[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Gameplay/CO_Enemy.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Other/SC_Stats.tscn" type="PackedScene" id=2]
[ext_resource path="res://Materials/EnemyMaterial/MT_Enemy_Default.tres" type="Material" id=3]

[sub_resource type="SphereMesh" id=1]
material = ExtResource( 3 )

[sub_resource type="SphereShape" id=2]

[sub_resource type="CylinderShape" id=3]
radius = 1.56146
height = 2.67853

[node name="Enemy" type="KinematicBody"]
collision_layer = 4
collision_mask = 5
script = ExtResource( 1 )
speed = 10

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.2, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.2, 0 )
shape = SubResource( 2 )

[node name="PathUpdateTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Stats" parent="." instance=ExtResource( 2 )]
max_HP = 1

[node name="AttackRadius" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="AttackRadius"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19263, 0 )
shape = SubResource( 3 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="PathUpdateTimer" to="." method="_on_PathUpdateTimer_timeout"]
[connection signal="died_signal" from="Stats" to="." method="_on_Stats_died_signal"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_AttackRadius_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
